
Bug Fixes
---------------------

* SOLR-15145: System property to control whether base_url is stored in state.json to enable back-compat with older SolrJ versions.
  (Timothy Potter)

* SOLR-15114: Fix bug that caused WAND optimization to be disabled in cases where the max score is requested (such as
  multi-shard requests in SolrCloud) (Naoto Minami via Tomás Fernández Löbbe)

==================  8.8.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

Upgrade Notes
---------------------

* Internal logic for identifying 'Solr Home' has been refactored to make testing less error prone.  Plugin
  developers using SolrPaths.locateSolrHome() or 'new SolrResourceLoader' should check deprecation warnings as existing
  some existing functionality will be removed in 9.0.  See SOLR-14934 for more details.

New Features
---------------------

* SOLR-14907: Add v2 API for configSet upload, including single-file insertion. (Houston Putman)

* SOLR-14560: Add interleaving support in Learning To Rank. (Alessandro Benedetti, Christine Poerschke)

* SOLR-15052: Reducing overseer bottlenecks using per-replica states (noble, Ishan Chattopadhyaya)

Improvements
---------------------
* SOLR-14942: Reduce leader election time on node shutdown by removing election nodes before closing cores.
  (Cao Manh Dat, Mike Drob, hossman, shalin)

* SOLR-14955: Add env var options for the Prometheus Exporter bin scripts (Houston Putman)

* SOLR-14683: Metrics API should ensure consistent placeholders for missing values. (ab)

* SOLR-15015 : Add interleaving algorithm parameter support in Learning To Rank (Alessandro Benedetti)

* SOLR-8673: Make JSON Facets extendable (Tim Owen via Mikhail Khludnev)

* SOLR-14965: metrics: Adds two metrics to the SolrCloud Overseer: solr_metrics_overseer_stateUpdateQueueSize
  and solr_metrics_overseer_collectionWorkQueueSize with corresponding entries in the the Prometheus exporter's