@@ -15,6 +15,8 @@ Bug Fixes
 * SOLR-15114: Fix bug that caused WAND optimization to be disabled in cases where the max score is requested (such as
   multi-shard requests in SolrCloud) (Naoto Minami via Tomás Fernández Löbbe)
 
+* SOLR-15136: Reduce excessive logging introduced with Per Replica States feature (Ishan Chattopadhyaya)
+
 ==================  8.8.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.
